--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,7 @@
 name: Release
 
 on:
+  workflow_dispatch:
   push:
     # Sequence of patterns matched against refs/tags
     tags:
@@ -23,7 +24,7 @@ jobs:
       uses: actions/setup-go@v2
       id: go
       with:
-        go-version: 1.18
+        go-version: 1.19.5
 
     - name: verify modules
       run: go mod verify
