--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,17 +38,11 @@ jobs:
 
     - name: fix build artifacts
       run: |
-        for tool in skiprange; do
-          mv _output/$tool $tool-${{ env.RELEASE_VERSION }}-linux-amd64
-        done
-        make clean outdir
-        for tool in skiprange; do
-          mv $tool-${{ env.RELEASE_VERSION}}-linux-amd64 _output/
-        done
+        mv _output/skiprange skiprange-${{ env.RELEASE_VERSION }}-linux-amd64
 
     - name: compute signature
       run: |
-        pushd _output && sha256sum * >> ../SHA256SUMS && mv ../SHA256SUMS . && popd
+        pushd _output && sha256sum * >> ../SHA256SUMS && popd
 
     - name: create release
       uses: ncipollo/release-action@v1
