vertool: introduce common tool
Introduce the common `vertool` binary to consolidate all
the functionalities. Obsoletes `skiprange`, which will
not receive further updates nor fixes and will be kept
around only to avoid CI breakages.

Signed-off-by: Francesco Romani <fromani@redhat.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,7 @@ jobs:
     - name: fix build artifacts
       run: |
         mv _output/skiprange _output/skiprange-${{ env.RELEASE_VERSION }}-linux-amd64
+        mv _output/vertool _output/vertool-${{ env.RELEASE_VERSION }}-linux-amd64
 
     - name: compute signature
       run: |
@@ -47,5 +48,5 @@ jobs:
     - name: create release
       uses: ncipollo/release-action@v1
       with:
-        artifacts: ")output/SHA256SUMS,_output/*-v*-linux-amd64"
+        artifacts: "_output/SHA256SUMS,_output/*-v*-linux-amd64"
         token: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
